--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile 'org.functionaljava:functionaljava:4.5'
+    compile 'org.functionaljava:functionaljava-java8:4.5'
     testCompile 'org.testng:testng:6.9.10'
     testCompile 'org.assertj:assertj-core:3.3.0'
     testCompile 'org.mockito:mockito-core:2.0.44-beta'
